--- a/_config.yml
+++ b/_config.yml
@@ -13,17 +13,15 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@domain.com
+title: Valley West Corner Store Ruined My Car
+email: 
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Valley West Corner Store Ruined My Car.
 baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "https://oktalk.github.io" # the base hostname & protocol for your site
-github_username:    jekyll
-instagram_username: jekyllrb
-twitter_username:   jekyllrb
+github_username:    oktalk
+instagram_username: 
+twitter_username:   
 
 # Build settings
 markdown: kramdown
